refactor(auth): remove EntityClient from PolicyEngine, use ResolvedEntitySpec for ownership: OwnerFieldResolverProviderTest